## Process this file with automake to create Makefile.in
# Makefile for Screen documentation

info_TEXINFOS = screen.texinfo

dist_man1_MANS = screen.1

MOSTLYCLEANFILES = *.cp *.cps *.fn *.fns *.ky *.kys *.pg *.tp *.vr \
	*.log *.aux *.toc *~

CLEANFILES = *.dvi

DISTCLEANFILES = *.info*

EXTRA_DIST = FAQ README.DOTSCREEN fdpat.ps make.help window_to_display.ps
